# agent-masterclass

./: .gitignore  README.md
a2a/: pyproject.toml
ai-agent/: inforgraphic.html  main.py
chatgpt-clone/: ai-memory.db  ai-memory.db-shm  ai-memory.db-wal  chat-gpt-clone-memory.db  dummy-agent.ipynb  pyproject.toml  tools.py
content-pipeline-agent/: crewai_flow.html  main.py  test_server.py  test_topic.py
customer-support-agent/: customer-support-memory.db  main.py  models.py
deep-research-clone/: deep-research-team.ipynb  email-optimizer-team.ipynb  pyproject.toml  report.md
deployment/: api.http  main.py  pyproject.toml
email-refiner-agent/: .http  api_mode.ipynb  code_mode.ipynb  pyproject.toml  session.db
financial_analyst/: pyproject.toml
hello_langgraph/: pyproject.toml
job-hunter-agent/: main.py  models.py  pyproject.toml  test_openai.py  tools(firecrawl).py  tools.py
multi-agent-architectures/: graph.py  main.ipynb  pyproject.toml
tutor-agent/: main.py
youtube-bigdata-agent/: KB Land Video Thumbnail.csv  KB Land Video Title.csv  download_thumbnails.py  fetch_video_data.py  final_data_with_agent_analysis.csv  final_data_with_agent_analysis.xlsx  final_youtube_data.csv  final_youtube_data.xlsx  final_youtube_data_perfect.csv  final_youtube_data_perfect.xlsx  job.ipynb  kb_video_dates.csv  kb_video_titles_raw.csv  main.py  ocr_analysis_results.csv  pyproject.toml  run_ocr_analysis.py  video_date.py
youtube-bigdata-agent/config/: agents.yaml  tasks.yaml
youtube-thumbnail-maker/: graph.py  main.ipynb  pyproject.toml  scripts.md  ytb_dlp.ipynb
(+72 files in other folders)
